<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layIce"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnIce1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:text="@string/btnIce1Lbl"
            />

        <Button
            android:id="@+id/btnIce2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editIceBreaker"
            android:paddingBottom="2dp"
            android:text="@string/btnIce2Lbl" />

    </LinearLayout>

    <TextView
        android:id="@+id/congratsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layScore"
        android:padding="20dp"
        />

    <LinearLayout
        android:id="@+id/layScore"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/layDice"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblScore"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:text="@string/scoreLbl"
            />

        <TextView
            android:id="@+id/scoreCount"
            android:layout_width="20dp"
            android:layout_height="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDice"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/layEntryNumber"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_dice"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:padding="10dp"
            android:src="@drawable/die0"
            android:contentDescription="@string/empty" />

        <TextView
            android:id="@+id/iceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/empty"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEntryNumber"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/enter_number_lbl"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_height="wrap_content"
            android:layout_width="40dp"
            android:inputType="number"
            android:text="@string/dice_number"
            />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:paddingBottom="2dp"
            android:text="@string/btnFinishLbl" />

    </LinearLayout>


</RelativeLayout>