<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditIcebreaker">

    <LinearLayout
        android:id="@+id/layEditIce"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/layButtons">

        <EditText
            android:id="@+id/editIceText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight ="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines ="5"
            android:scrollHorizontally="false"
            android:text="@string/empty"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:text="@string/btnCancelIceLbl"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:text="@string/btnSaveIceLbl"
            />

    </LinearLayout>
</RelativeLayout>